# rinha-2025

./: CMakeLists.txt  Dockerfile  README.md  aux.h  docker-compose.yml  http_client.c  http_client.h  http_server.c  http_server.h  main.c  queue.c  queue.h  range_array.c  range_array.h  timestamp.c  timestamp.h
src/: http_client.c  http_client.h  http_server.c  http_server.h  lock_free_queue.c  lock_free_queue.h  main.c  payment.h  settings.h  shm_array.c  shm_array.h  time.h
